--- a/home/dot_config/homebrew/Brewfile
+++ b/home/dot_config/homebrew/Brewfile
@@ -16,6 +16,7 @@ brew "ripgrep"
 brew "starship"
 brew "tmux"
 brew "xcodes"
+brew "zsh-completions"
 cask "1password"
 cask "arc"
 cask "clipy"
@@ -24,3 +25,83 @@ cask "iterm2"
 cask "logi-options+"
 cask "obsidian"
 cask "visual-studio-code"
+vscode "42crunch.vscode-openapi"
+vscode "apollographql.vscode-apollo"
+vscode "bierner.markdown-mermaid"
+vscode "bodil.file-browser"
+vscode "bradlc.vscode-tailwindcss"
+vscode "christian-kohler.npm-intellisense"
+vscode "christian-kohler.path-intellisense"
+vscode "cschlosser.doxdocgen"
+vscode "dbaeumer.vscode-eslint"
+vscode "devcycle.devcycle-feature-flags"
+vscode "devsense.intelli-php-vscode"
+vscode "donjayamanne.githistory"
+vscode "eamodio.gitlens"
+vscode "ecmel.vscode-html-css"
+vscode "emmanuelbeziat.vscode-great-icons"
+vscode "esbenp.prettier-vscode"
+vscode "firsttris.vscode-jest-runner"
+vscode "formulahendry.auto-close-tag"
+vscode "formulahendry.auto-rename-tag"
+vscode "formulahendry.code-runner"
+vscode "genieai.chatgpt-vscode"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.vscode-github-actions"
+vscode "golang.go"
+vscode "hediet.vscode-drawio"
+vscode "htmlhint.vscode-htmlhint"
+vscode "humao.rest-client"
+vscode "jacobdufault.fuzzy-search"
+vscode "jock.svg"
+vscode "kahole.magit"
+vscode "kisstkondoros.vscode-gutter-preview"
+vscode "leizongmin.node-module-intellisense"
+vscode "lokalise.i18n-ally"
+vscode "mads-hartmann.bash-ide-vscode"
+vscode "mgmcdermott.vscode-language-babel"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-playwright.playwright"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.makefile-tools"
+vscode "ms-vscode.remote-explorer"
+vscode "ms-vscode.remote-server"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "oderwat.indent-rainbow"
+vscode "pkief.material-icon-theme"
+vscode "pranaygp.vscode-css-peek"
+vscode "prisma.prisma"
+vscode "proohit.openapi-snippets"
+vscode "rangav.vscode-thunder-client"
+vscode "redhat.vscode-yaml"
+vscode "redocly.openapi-vs-code"
+vscode "ritwickdey.liveserver"
+vscode "smelukov.vscode-csstree"
+vscode "streetsidesoftware.code-spell-checker"
+vscode "styled-components.vscode-styled-components"
+vscode "stylelint.vscode-stylelint"
+vscode "taichi.vscode-textlint"
+vscode "techer.open-in-browser"
+vscode "typespec.typespec-vscode"
+vscode "usernamehw.errorlens"
+vscode "visualstudioexptteam.intellicode-api-usage-examples"
+vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vitest.explorer"
+vscode "vscodevim.vim"
+vscode "vspacecode.vspacecode"
+vscode "vspacecode.whichkey"
+vscode "xabikos.javascriptsnippets"
+vscode "xadillax.viml"
+vscode "ygkn.storybook-opener"
+vscode "yzhang.markdown-all-in-one"
+vscode "zhuangtongfa.material-theme"
+vscode "zignd.html-css-class-completion"
