--- a/home/dot_config/homebrew/Brewfile
+++ b/home/dot_config/homebrew/Brewfile
@@ -20,6 +20,7 @@ brew "zsh-completions"
 cask "1password"
 cask "arc"
 cask "clipy"
+cask "docker"
 cask "font-hack-nerd-font"
 cask "iterm2"
 cask "logi-options+"
