add: include ChatGPT and WezTerm casks in Brewfile

--- a/home/dot_config/homebrew/Brewfile
+++ b/home/dot_config/homebrew/Brewfile
@@ -19,6 +19,7 @@ brew "xcodes"
 brew "zsh-completions"
 cask "1password"
 cask "arc"
+cask "chatgpt"
 cask "clipy"
 cask "docker"
 cask "font-hack-nerd-font"
@@ -26,6 +27,7 @@ cask "iterm2"
 cask "logi-options+"
 cask "obsidian"
 cask "visual-studio-code"
+cask "wezterm"
 vscode "42crunch.vscode-openapi"
 vscode "apollographql.vscode-apollo"
 vscode "bierner.markdown-mermaid"
