--- a/home/.chezmoiexternal.toml
+++ b/home/.chezmoiexternal.toml
@@ -6,3 +6,10 @@ url = "https://github.com/tmux-plugins/tpm/archive/master.tar.gz"
 exact = true
 stripComponents = 1
 refreshPeriod = "168h"
+
+[".config/nvim"]
+type = "git-repo"
+url = "https://github.com/NvChad/starter.git"
+exact = true
+stripComponents = 1
+refreshPeriod = "168h"
