--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -3,9 +3,9 @@ set-option -g default-shell /bin/zsh
 
 set -s set-clipboard external
 
-# tmuxを256色表示できるようにする
-set -g default-terminal "screen-256color"
-set-option -g terminal-overrides 'xterm*:colors=256'
+# 24-bit True Color を有効にする
+set -g default-terminal "tmux-256color"
+set -as terminal-features ",*:RGB"
 
 # prefixキーをC-qに変更
 set -g prefix C-a
