--- a/home/private_Library/private_Application Support/lazygit/config.yml
+++ b/home/private_Library/private_Application Support/lazygit/config.yml
@@ -9,6 +9,6 @@ git:
     colorArg: always
     pager: delta --dark --paging=never --side-by-side --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
   log:
-    showWholeGraph: true
+    showWholeGraph: false
   allBranchesLogCmds:
     - git log --graph --color=always --date=format:'%Y-%m-%d %H:%M' --pretty=format:'%C(#a0a0a0 reverse)%h%Creset %C(cyan)%ad%Creset %C(#dd4814)%ae%Creset %C(yellow reverse)%d%Creset %n%C(white bold)%s%Creset%n' --
